fix text being cut off on the profile

--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -42,11 +42,15 @@ h5 { font-size: 24px; }
 h1.display1 {
   font-size: 104px;
   line-height: 1.1;
+  padding: 0.4rem 0;
+  margin: -0.4rem 0;
 }
 
 h1.display2 {
   font-size: 80px;
   line-height: 1.1;
+  padding: 0.4rem 0;
+  margin: -0.4rem 0;
 }
 
 p.extra-large { font-size: 24px; }
@@ -112,7 +116,7 @@ a {
   -webkit-text-fill-color: transparent;
 }
 .text-gradient-3 { 
-  background: linear-gradient(to right bottom, rgb(0, 0, 0) 30%, rgba(255, 255, 255, 0.38));
+  background: $gradient-3;
   // background: radial-gradient(40% 70% at 50% 100%, rgba(255, 255, 255, 0.4), rgb(255, 255, 255)) text;;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -446,7 +450,7 @@ a.btn, input.btn, button.btn {
   &.primary {
     &.high {
       // background: $primary-900; 
-      background: linear-gradient(80deg, rgb(69, 94, 181) 10%, rgb(86, 67, 204) 45%, rgb(103, 63, 215) 65%);
+      background: $gradient-3;
       color: $white; 
       svg path {
         fill: $white;
@@ -459,7 +463,7 @@ a.btn, input.btn, button.btn {
     }
     &.medium {
       // background: $primary-light; 
-      // background: linear-gradient(80deg, rgb(69, 94, 181) 10%, rgb(86, 67, 204) 45%, rgb(103, 63, 215) 65%);
+      // background: $gradient-3;
       background: linear-gradient(92.88deg, rgba(69, 94, 181, 0.08) 9.16%, rgba(86, 67, 204, 0.08) 43.89%, rgba(103, 63, 215, 0.08) 64.72%);
       color: $primary-900;
       svg path {
@@ -468,8 +472,8 @@ a.btn, input.btn, button.btn {
       &:hover {
         color: $white; 
         box-shadow: rgba(80, 63, 205, 0.5) 0px 1px 40px;
-        background: linear-gradient(92.88deg, rgba(69, 94, 181, 1) 9.16%, rgba(86, 67, 204, 1) 43.89%, rgba(103, 63, 215, 1) 64.72%);
-        // background: linear-gradient(80deg, rgb(69, 94, 181) 10%, rgb(86, 67, 204) 45%, rgb(103, 63, 215) 65%);
+        background: $gradient-3;
+        // background: $gradient-3;
         // background: -webkit-linear-gradient(#eee, #333);
 
         svg path {
